Added PreStart and Final score to the audience display with switching buttons

--- a/O!FMS-V0/My Project/Resources.resx
+++ b/O!FMS-V0/My Project/Resources.resx
@@ -160,4 +160,13 @@
   <data name="ScoreBoard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ScoreBoard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Pre_Match_Image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pre-Match_Image.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FirstPowerUpLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FirstPowerUpLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FinalScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FinalScore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
