--- a/O!FMS-V0/OFMS-MainForm.resx
+++ b/O!FMS-V0/OFMS-MainForm.resx
@@ -129,6 +129,9 @@
   <metadata name="FMSMasterTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>612, 16</value>
   </metadata>
+  <metadata name="WarmUpTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>798, 16</value>
+  </metadata>
   <metadata name="AutoTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 55</value>
   </metadata>
