added warning sound and fixed the access point configuration strings

--- a/O!FMS-V0/My Project/Resources.resx
+++ b/O!FMS-V0/My Project/Resources.resx
@@ -169,4 +169,7 @@
   <data name="FinalScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FinalScore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="match-warning-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Comet-SoundBible.com-1256431940.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
